# TRy1

./: .gitignore  README.md
commit-classifier/: .env.example  README.md  pyproject.toml  requirements.txt  train.py
huggingface-mcp/: .env.example  README.md  pyproject.toml
huggingface-mcp/src/: __init__.py  __main__.py  server.py
prcheck/: .env.example  README.md  pyproject.toml
prcheck/src/: __init__.py  prcheck.py
