[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commit-classifier"
version = "0.1.0"
description = "Fine-tuned DistilBERT model that classifies git commit messages into conventional commit types"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["nlp", "git", "commit", "classifier", "huggingface", "transformers"]
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.0",
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
    "accelerate>=0.27.0",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
commit-classifier = "train:main"
