[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huggingface-mcp"
version = "0.1.0"
description = "MCP server for HuggingFace Hub — search models, datasets, compare benchmarks, and explore the Hub via Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "huggingface", "llm", "ai", "claude"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
huggingface-mcp = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
